--- a/app/src/main/res/layout/activity_take_order.xml
+++ b/app/src/main/res/layout/activity_take_order.xml
@@ -153,13 +153,13 @@
         android:layout_marginEnd="8dp"
         android:text=" Status"
         android:textSize="24sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/button4"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btnRegisterMe"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.629"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btnRegisterMe"
         android:layout_width="131dp"
         android:layout_height="46dp"
         android:layout_marginStart="8dp"
