--- a/app/src/main/res/layout/activity_veg.xml
+++ b/app/src/main/res/layout/activity_veg.xml
@@ -234,5 +234,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button20" />
 
+    <Button
+        android:id="@+id/Addnew"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:onClick="InsertIeam"
+        android:text="Add New Iteam"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button20" />
+
 
 </android.support.constraint.ConstraintLayout>
