--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -43,12 +43,13 @@
             android:layout_width="5dp"
             android:layout_height="0dp"
             android:onClick="Admindashlog"
+            android:text="Validate"
             android:textColor="@color/DarkBlue"
             android:textSize="15sp"
+            app:sub_btn_duration="3000"
             app:sub_btn_background="@color/sub_btn_line"
             app:sub_btn_line_color="@color/white"
-            app:sub_btn_tick_color="@color/gray"
-            android:text="Validate"/>
+            app:sub_btn_tick_color="@color/gray" />
 
 
     </LinearLayout>
