--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -38,18 +38,15 @@
             android:textSize="40sp"
             android:textStyle="bold" />
 
-        <com.spark.submitbutton.SubmitButton
-            android:id="@+id/button6"
-            android:layout_width="5dp"
-            android:layout_height="0dp"
-            android:onClick="Admindashlog"
-            android:text="Validate"
-            android:textColor="@color/DarkBlue"
-            android:textSize="15sp"
-            app:sub_btn_duration="3000"
-            app:sub_btn_background="@color/sub_btn_line"
-            app:sub_btn_line_color="@color/white"
-            app:sub_btn_tick_color="@color/gray" />
+        <Button
+            android:id="@+id/button"
+            android:layout_width="92dp"
+            android:layout_height="92dp"
+            android:background="#FFA400"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </LinearLayout>
