--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -34,19 +34,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hi! Have A Nice day"
-            android:textColor="#FFF"
+            android:textColor="@color/gradEnd"
             android:textSize="40sp"
-            android:textStyle="bold" />
+            android:textStyle="bold|italic" />
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="92dp"
-            android:layout_height="92dp"
-            android:background="#FFA400"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+
 
 
     </LinearLayout>
@@ -70,9 +62,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="160dp"
         android:layout_marginLeft="160dp"
-        android:layout_marginTop="540dp"
+        android:layout_marginTop="400dp"
         android:onClick="Admindashlog"
-        android:text="Log In here"
+        android:background="@color/DarkBlue"
+
+
+        android:text="Dash Borad"
+        android:textStyle="italic|bold"
+        android:textColor="@color/gradEnd"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
