--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -168,7 +168,8 @@
                     android:textSize="13sp"
                     android:text="Contact No"/>
 
-                <TextView
+                <EditText
+                    android:id="@+id/con_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
@@ -198,6 +199,7 @@
                     android:text="NIC No"/>
 
                 <TextView
+                    android:id="@+id/nic_no"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
@@ -227,6 +229,7 @@
                     android:text="License No"/>
 
                 <TextView
+                    android:id="@+id/license_no"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
@@ -255,7 +258,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="#24a0ed"
+                    android:background="@drawable/mybutton"
                     android:text="Edit My Account"
                     android:layout_gravity="center"
                     android:textColor="@android:color/white"/>
@@ -265,7 +268,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="#32CD32"
+                    android:background="@drawable/mybutton1"
                     android:text="Delete  Account"
                     android:layout_gravity="center"
                     android:textColor="@android:color/white" />
