insert part register

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -254,7 +254,7 @@
                 android:orientation="vertical">
 
                 <Button
-                    android:id="@+id/btnSignUp"
+                    android:id="@+id/btnEdit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -264,7 +264,7 @@
                     android:textColor="@android:color/white"/>
 
                 <Button
-                    android:id="@+id/btnSignIn"
+                    android:id="@+id/btnDelete"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
