--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -248,46 +248,46 @@
 
 
             <LinearLayout
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="0dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <Button
                     android:id="@+id/btnEdit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
                     android:layout_weight="1"
-                    android:background="@drawable/mybutton"
-                    android:text="Show Details"
+                    android:background="#32CD32"
+                    android:text=" Show Details "
                     android:layout_gravity="center"
                     android:textColor="@android:color/white"/>
 
                 <Button
                     android:id="@+id/btnDelete"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@drawable/mybutton1"
-                    android:text="Update  Account"
                     android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:background="#24a0ed"
+                    android:text="Update  Account"
                     android:textColor="@android:color/white" />
 
                 <Button
                     android:id="@+id/btnDeleteAccount"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@drawable/mybutton"
-                    android:text="Delete  Account"
                     android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:background="#FF4081"
+                    android:text="Delete  Account"
                     android:textColor="@android:color/white" />
 
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_marginTop="15sp"
+                    android:layout_marginTop="18sp"
                     android:background="@color/gray"/>
 
             </LinearLayout>
