--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -254,9 +254,9 @@
                 android:orientation="vertical">
 
                 <Button
-                    android:id="@+id/btnEdit"
+                    android:id="@+id/btnShow"
                     android:layout_width="match_parent"
-                    android:layout_height="2dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="#32CD32"
                     android:text=" Show Details "
@@ -264,7 +264,7 @@
                     android:textColor="@android:color/white"/>
 
                 <Button
-                    android:id="@+id/btnDelete"
+                    android:id="@+id/btnEdit"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -274,7 +274,7 @@
                     android:textColor="@android:color/white" />
 
                 <Button
-                    android:id="@+id/btnDeleteAccount"
+                    android:id="@+id/btnRem"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -286,7 +286,7 @@
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="3dp"
                     android:layout_marginTop="18sp"
                     android:background="@color/gray"/>
 
