* errors with edit fixed * user can remove particular item from the cart

--- a/app/src/main/res/layout/cart_card_view.xml
+++ b/app/src/main/res/layout/cart_card_view.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="4dp"
     android:background="@color/cardview_dark_background">
 
     <LinearLayout
@@ -15,11 +16,12 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1">
+
             <ImageView
+                android:id="@+id/itemPicCart"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:scaleType="fitXY"
-                android:id="@+id/itemPicCart"/>
+                android:scaleType="fitXY" />
         </LinearLayout>
 
         <LinearLayout
