--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -234,8 +234,8 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
                     android:text="7878787878"
-                    android:textSize="18sp"
-                    android:textColor="#000000"/>
+                    android:textColor="#000000"
+                    android:textSize="18sp" />
 
                 <View
                     android:layout_width="match_parent"
