String xml for veg layout is done!

--- a/app/src/main/res/layout/activity_veg.xml
+++ b/app/src/main/res/layout/activity_veg.xml
@@ -27,7 +27,7 @@
         android:layout_marginStart="132dp"
         android:layout_marginLeft="132dp"
         android:layout_marginTop="10dp"
-        android:text="Vegetables"
+        android:text="@string/Vegetables"
         android:textColor="@color/gray"
         android:textSize="24dp"
         android:textStyle="bold"
@@ -44,7 +44,7 @@
         android:paddingTop="2dp"
         android:paddingRight="2dp"
         android:paddingBottom="2dp"
-        android:text="ID:"
+        android:text="@string/textView7"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +67,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:padding="2dp"
-        android:text="Price:"
+        android:text="@string/textView40"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -106,7 +106,7 @@
         android:paddingTop="2dp"
         android:paddingRight="2dp"
         android:paddingBottom="2dp"
-        android:text="Name"
+        android:text="@string/textView8"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -122,7 +122,7 @@
         android:paddingTop="2dp"
         android:paddingRight="2dp"
         android:paddingBottom="2dp"
-        android:text="QTY:"
+        android:text="@string/textView9"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -148,7 +148,7 @@
         android:layout_marginBottom="24dp"
         android:background="@color/gradStart"
         android:onClick="InsertIeam"
-        android:text="Add New Iteam"
+        android:text="@string/Addnew"
         android:textColor="@color/colorAccent"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -162,7 +162,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginTop="24dp"
-        android:text="View"
+        android:text="@string/View1"
         android:textColor="@color/DarkBlue"
         android:textStyle="italic|bold"
         android:background="@color/blue"
@@ -174,7 +174,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:text="Delete"
+        android:text="@string/Delete1"
         android:textStyle="bold|italic"
         android:textColor="@color/DarkBlue"
         android:background="@color/gradEnd"
@@ -187,7 +187,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="8dp"
-        android:text="Update"
+        android:text="@string/update1"
         android:textColor="@color/DarkBlue"
         android:textStyle="italic|bold"
         android:background="@color/sub_btn_line"
@@ -203,7 +203,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
-        android:text="ID:"
+        android:text="@string/textView42"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/id2"
@@ -227,7 +227,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
-        android:text="Name:"
+        android:text="@string/textView43"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -250,7 +250,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:text="Price:"
+        android:text="@string/textView44"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/price2"
@@ -275,7 +275,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
-        android:text="QTY:"
+        android:text="@string/textView45"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/qty2"
@@ -299,7 +299,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginTop="48dp"
-        android:text="View"
+        android:text="@string/View2"
         android:textColor="@color/DarkBlue"
         android:textStyle="italic|bold"
         android:background="@color/blue"
@@ -311,7 +311,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:text="Delete"
+        android:text="@string/delete2"
         android:textStyle="bold|italic"
         android:textColor="@color/DarkBlue"
         android:background="@color/gradEnd"
@@ -324,7 +324,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="8dp"
-        android:text="Update"
+        android:text="@string/Update2"
         android:textColor="@color/DarkBlue"
         android:textStyle="italic|bold"
         android:background="@color/sub_btn_line"
