--- a/app/src/main/res/layout/activity_insert_item.xml
+++ b/app/src/main/res/layout/activity_insert_item.xml
@@ -35,7 +35,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textview6"
+            android:id="@+id/additeam"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ADD ITEAMS"
@@ -153,7 +153,7 @@
             android:textSize="16sp"/>
 
         <Button
-            android:id="@+id/Addnew"
+            android:id="@+id/Addnew1"
             android:layout_width="100dp"
             android:layout_height="30dp"
             android:layout_marginStart="8dp"
